--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "author": "Sebastian Müller <c@semu.mp>",
-  "name": "noduino",
-  "description": "Arduino framework for fuck*ng mad scientists",
+  "author": "Left Field Labs (leftfieldlabs.com)",
+  "name": "Happy holidays from LFL",
+  "description": "A 2012 holiday gift from LFL",
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "git://github.com/semu/noduino.git"
+    "url": "git://github.com/codedcolors/drawduino.git"
   },
   "dependencies": {
     "serialport": "*",
