package.json name update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Left Field Labs (leftfieldlabs.com)",
-  "name": "Happy holidays from LFL",
+  "name": "Happy-holidays-from-LFL",
   "description": "A 2012 holiday gift from LFL",
   "version": "0.0.1",
   "repository": {
